--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # db credentials
 spring.datasource.url=jdbc:postgresql://localhost:5432/wintersport_db
-spring.datasource.username=root
+spring.datasource.username=admin
 spring.datasource.password=root
 
 # postgres dialect
