add profiles activation

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,6 @@
-# active profile
-spring.profiles.active=test
-
+# activate profile
+spring.config.activate.on-profile=test
 # db credentials
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_wintersport_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_wintersport_db
 spring.datasource.username=admin
 spring.datasource.password=root
