--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
+# activate profile
+spring.config.activate.on-profile=prod
 # db credentials
 spring.datasource.url=jdbc:postgresql://localhost:5432/wintersport_db
 spring.datasource.username=admin
 spring.datasource.password=root
-
-spring.profiles.active=prod
