--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,6 @@ spring.config.activate.on-profile=prod
 spring.datasource.url=jdbc:postgresql://localhost:5432/wintersport_db
 spring.datasource.username=admin
 spring.datasource.password=root
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
