--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,10 @@
 # activate profile
 spring.config.activate.on-profile=test
 # db credentials
-spring.datasource.url=jdbc:postgresql://localhost:5433/test_wintersport_db
-spring.datasource.username=admin
-spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:test_wintersport_db
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
