--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,7 @@
 # activate profile
 spring.config.activate.on-profile=prod
+
 # db credentials
-spring.datasource.url=jdbc:postgresql://localhost:5432/wintersport_db
+spring.datasource.url=jdbc:h2:mem:wintersport_db
 spring.datasource.username=admin
 spring.datasource.password=root
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
