--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # activate profile
-spring.config.activate.on-profile=test
+spring.config.activate.on-profile=dev
 
 # db credentials
-spring.datasource.url=jdbc:h2:mem:test_wintersport_db
+spring.datasource.url=jdbc:h2:mem:dev_wintersport_db
 spring.datasource.username=sa
 spring.datasource.password=
